test/compile-fail/find-file/duplicate-module-files-io-error-double/expected.txt
error: file not found for module `a`
 --> top.rhdl:1:0
  |
1 | mod a;
  | ^^^^^^ ./test/compile-fail/find-file/duplicate-module-files-io-error-double/a.rhdl : Permission denied (os error 13)
error: file not found for module `a`
 --> top.rhdl:1:0
  |
1 | mod a;
  | ^^^^^^ ./test/compile-fail/find-file/duplicate-module-files-io-error-double/a/mod.rhdl : Permission denied (os error 13)
